--- a/demo.html
+++ b/demo.html
@@ -47,7 +47,7 @@
                 tickTextColor: 'white',	
 				//圓變漢字部分字體顏色 (預設 random)
 				nameTextColor: 'green',
-                nameText: '展示用',
+                nameText: '張張張',
 				//圓變漢字部分圓形顏色
                 nameCircleColor: 'rgba(106,76,156,0.3)',
                 nameTransitionLoop: true,
@@ -61,7 +61,7 @@
                 hwTickDelay: 2000
             },
             loading: {
-                githubAccount: 't109598105',
+                githubAccount: 'changjackj',
                 githubRepo: 'portfolio-demo',
 				//自動載入圖片，如果作業有 cross-domain 的話，不要設為 true
 				autoLoading: true
