--- a/hw01/index.html
+++ b/hw01/index.html
@@ -1,9 +1,11 @@
 <html>
 	<head></head>
 	<body> 
-		<h1> hw1 </h1>
-		<div> <img src="/hw01/tree.jpg"> </div>
-		<div> This is HW1 </div>
+		<ol>
+			<li><a href="">1. 下載 otf 字型檔</a></li>
+			<li><a href="">2. Colab 程式碼</a></li>
+			<li><a href="">3. 下載 ttf 字型檔</a></li>
+		</ol>
 	</body>
 
 
