--- a/hw01/index.html
+++ b/hw01/index.html
@@ -2,9 +2,9 @@
 	<head></head>
 	<body> 
 		<ol>
-			<li><a href="">1. 下載 otf 字型檔</a></li>
-			<li><a href="">2. Colab 程式碼</a></li>
-			<li><a href="">3. 下載 ttf 字型檔</a></li>
+			<li><a href="https://github.com/changjackj/ct2022s/blob/main/hw01/SourceHanSerif-Heavy.otf">1. 下載 otf 字型檔</a></li>
+			<li><a href="https://colab.research.google.com/drive/1WGcA40bIsjgnS-kDgz-VNBOifJXVNaQ4">2. Colab 程式碼</a></li>
+			<li><a href="https://github.com/changjackj/ct2022s/blob/main/hw01/SourceHanSerif-Heavy.ttf">3. 下載 ttf 字型檔</a></li>
 		</ol>
 	</body>
 
