--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				nameCircleStroke: 'white',
                 tickTextColor: 'white',	
 				nameTextColor: 'green',
-                nameText: '展示用',
+                nameText: '張張張',
                 nameCircleColor: 'rgba(106,76,156,0.3)',
                 nameTransitionLoop: true,
 				
@@ -95,7 +95,7 @@
                 }
             },
             loading: {
-                githubAccount: 't109598105',
+                githubAccount: 'changjackj',
                 githubRepo: 'portfolio-demo'
             }
         };
