--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                     dy: '15px'
                 },
 				//圓變漢字時間
-				hwTickDuration: 2000,
+				hwTickDuration: 1000,
                 hwTickDelay: 2000
             },
             loading: {
                 githubAccount: 'changjackj',
                 githubRepo: 'portfolio-demo',
 				//自動載入圖片，如果作業有 cross-domain 的話，不要設為 true
-				autoLoading: true
+				autoLoading: false
             }
         };
 		
