--- a/hw04/index.html
+++ b/hw04/index.html
@@ -18,7 +18,7 @@
 		}
 		.poems {
 			/*font-family: 'cjkFonts 全瀨體';  Strong Baseline 字型檔 */
-			font-family: 'myFont';
+			font-family: 'StrongFont';
 		}
 		@font-face {
 			font-family: MyHelvetica;
